<resources>
    <string name="app_name">Safe and Sound</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="desired_username">Desired Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="upload_a_photo">Upload A Photo</string>
    <string name="cancel">Cancel</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile_image">Profile Image</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="take_a_photo">Take A Photo</string>
    <string name="or">or</string>
    <string name="responders_from_group_name_1">Responders from Group Name 1:</string>
    <string name="group_member_1">Group Member 1</string>
    <string name="y_n">Y/N</string>
    <string name="comments">Comments</string>
    <string name="go_back">Go Back</string>
    <string name="send_a_message">Send A Message</string>
    <string name="choose_group_s_to_send_a_message_to">Choose group(s) to send a message to:</string>
    <string name="chosen_group_s">Chosen group(s):</string>
    <string name="group_name_1">Group Name 1</string>
    <string name="enter_text_message_you_would_like_to_send_everyone">Enter text message you would like to send everyone</string>
    <string name="send">Send</string>
    <string name="check_an_event">Check An Event</string>
    <string name="choose_the_event_name_you_want_to_check">Choose the event name you want to check:</string>
    <string name="check_employee_status_report">Check Employee Status Report</string>
    <string name="create_an_event">Create An Event</string>
    <string name="event_name">Event Name</string>
    <string name="pick_the_groups_that_will_get_the_messages_you_send_during_this_event">Pick the groups that will get the messages you send during this event:</string>
    <string name="chosen_group">Chosen Group(s):</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="delete_checked_groups">Delete Checked Groups</string>
    <string name="delete_all">Delete All</string>
    <string name="idk">Please pick at least one group to send a message to.</string>
    <string name="event_description">Event Description</string>
    <string name="sign_up_text">If you are new to Safe and Sound, use the Sign Up button to create your account.</string>
    <string name="sign_in_text">If you are a returning user, use the Sign In button to access your groups and manage incidents.</string>
    <string name="welcome_org_text">Welcome to Safe and Sound</string>
    <string name="working_groups_text">Working with your Groups</string>
    <string name="working_incidents_text">Working with Incidents</string>
    <string name="chg_grp_text">Change a Group</string>
    <string name="bld_grp_text">Build a Group</string>
    <string name="chk_evnt_text">Check an Event</string>
    <string name="crt_evnt_text">Create an Event</string>
    <string name="send_grp_msgs_text">Send Messages to a Group</string>
    <string name="signout">Sign Out</string>
    <string name="logo">logo</string>
    <string name="change_a_group">Change A Group</string>
    <string name="choose_a_group_you_would_like_to_change">Choose a group you would like to change:</string>
    <string name="choose_the_member_s_you_would_like_to_add_or_delete_from_this_group">Choose the member(s) you would like to add or delete from this group:</string>
    <string name="delete_checked_groups_from_list">Delete Checked Groups From List</string>
    <string name="delete_all_from_list">Delete All From List</string>
    <string name="chosen_member_s">Chosen Member(s):</string>
    <string name="add_to_group">Add To Group</string>
    <string name="remove_from_group">Remove From Group</string>
    <string name="build_a_group">Build A Group</string>
    <string name="choose_the_name_of_a_person_in_your_organization_to_add_to_or_delete_from_your_group">Choose the name of a person in your contacts to add to or delete from your group:</string>
    <string name="enter_a_group_name">Enter a group name:</string>
    <string name="group_name">Group Name</string>
    <string name="chosen_members">Chosen Members:</string>
    <string name="delete_checked_boxes">Delete Checked Boxes</string>
    <string name="a_group_will_be_made_with_the_same_name_as_the_event">A group will be made with the same name as the event.</string>
    <string name="responders_from_event_group_name">Responders from Event Group Name:</string>
    <string name="done">Done</string>
    <string name="choose_the_member_s_you_would_like_to_add_to_this_group">Choose the member(s) you would like to add to this group:</string>
    <string name="choose_the_member_s_you_would_like_to_remove_from_this_group">Choose the member(s) you would like to remove from this group:</string>
    <string name="choose_the_name_of_a_person_in_your_contacts_to_add_to_your_group">Choose the name of a person in your contacts to add to your group:</string>
    <string name="delete_checked_members_from_list">Delete checked members from list</string>
    <string name="choose_a_group_to_add_member_s">Choose a group to add member(s):</string>
    <string name="choose_a_group_to_remove_member_s_from">Choose a group to remove member(s) from:</string>
    <string name="delete_all_members_from_list">Delete All Members From List</string>
    <string name="stop_light">Stop Light!</string>
    <string name="g">GOOD</string>
    <string name="b">BAD</string>
    <string name="u">UNK</string>
    <string name="settings_button">Settings</string>
    <string name="delete_group_button">Delete Group</string>
    <string name="google_sign_in_text">Sign-in with Google</string>
    <string name="profile_pic_description">user profile picture</string>
    <string name="messages">Messages</string>
    <string name="your_groups">Your Groups</string>
    <string name="groups">Groups</string>
    <string name="buttonBack"><![CDATA[<]]></string>
    <string name="create_group">Create Group</string>
    <string name="plus">+</string>
    <string name="what_would_you_like_to_do">What would you like to do?</string>
    <string name="events">Events</string>
    <string name="event_status_report">Event Status Report</string>
    <string name="affected_groups">Affected Groups</string>
</resources>
