<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_org"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="24dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--        <TextView-->
        <!--            android:id="@+id/welcomeTextView"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:gravity="center"-->
        <!--            android:text="@string/welcome_org_text"-->
        <!--            android:textAlignment="center"-->
        <!--            android:textColor="@color/colorPrimaryDark"-->
        <!--            android:textSize="24sp" />-->

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            android:id="@+id/welcomeTextView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/working_groups_text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buildGroupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bld_grp_text"
                android:textAlignment="center" />

            <Button
                android:id="@+id/delete_a_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/delete_group_button" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addToGroupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_to_group"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/removeFromGroupButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove_from_group"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <Button
            android:id="@+id/sendMsgsButton"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:text="@string/send_grp_msgs_text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            android:id="@+id/welcomeTextView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/working_incidents_text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/createEventButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crt_evnt_text"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/checkEventButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chk_evnt_text"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <LinearLayout
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/profile_button"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_button" />

            <Button
                android:id="@+id/signOutButton"
                android:layout_width="146dp"
                android:layout_height="wrap_content"
                android:text="@string/signout" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>