<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    tools:context="com.example.elizabethwhitebaker.safeandsound.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:id="@+id/activity_main"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="310dp"
        android:layout_height="47dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_in_text"
        app:layout_constraintBottom_toTopOf="@+id/signin_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signin_button"
        android:layout_width="242dp"
        android:layout_height="0dp"
        android:layout_marginBottom="32dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/signup_button"
        android:layout_width="242dp"
        android:layout_height="48dp"
        android:layout_marginBottom="50dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="316dp"
        android:layout_height="173dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sslogo" />

    <TextView
        android:layout_height="40dp"
        android:layout_width="310dp"
        android:id="@+id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/signup_button"
        android:text="@string/sign_up_text"
        android:layout_marginBottom="24dp"/>

    <androidx.constraintlayout.widget.Group
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/group"/>


    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/google_sign_in_text"
        app:layout_constraintBottom_toTopOf="@+id/google_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>